Add Collabora as sponsor

--- a/less/agency.less
+++ b/less/agency.less
@@ -719,3 +719,9 @@ img::-moz-selection {
 body {
     webkit-tap-highlight-color: @brand-primary;
 }
+
+// Sponsors
+
+.sponsors img {
+    margin: 20px;
+}
