--- a/less/agency.less
+++ b/less/agency.less
@@ -654,6 +654,10 @@ ul.social-buttons {
 		img {
 			margin-bottom: 30px;
 		}
+        iframe {
+            margin-bottom: 30px;
+            max-width: 100%;
+        }
 	}
     .close-modal {
         position: absolute;
