--- a/css/agency.css
+++ b/css/agency.css
@@ -216,8 +216,13 @@ fieldset[disabled] .btn-xl.active {
   .navbar-default.navbar-shrink .navbar-brand {
     font-size: 1.5em;
   }
+}
+@media (max-width: 768px) {
   h3.longmail {
     font-size: 16px;
+  }
+  h2.longtitle {
+    font-size: 33px !important;
   }
 }
 header {
@@ -734,6 +739,7 @@ body {
 }
 .sponsors img {
   margin: 20px;
+  max-width: 60%;
 }
 div.sponsors {
   margin-bottom: 20px;
