--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -1,12 +1,13 @@
 :root {
   --text-color: #333;
-  --light-text-color: #cc7a00;
-  --light-background-color: #f7f7f7;
   --dark-background-color: #333;
-  --orange: #ff9900;
-  --orange-background: #ff9900cc;
-  --darker-orange: #fff;
+  --light-background-color: #f7f7f7;
   --grey: #777;
+  --lighter-orange: #ffb343;
+  --light-orange: #ff9900;
+  --orange: #a36100;
+  --dark-orange: #804c00;
+  --orange-background: #ff9900cc;
 }
 
 html, body {
@@ -43,13 +44,12 @@ a {
   color: var(--orange);
 }
 
-a:hover, a:focus, a:active, a.active {
-  color: var(--light-text-color);
+a:hover, a:focus, a:active {
+  color: var(--dark-orange);
 }
 
 nav {
   background: var(--dark-background-color);
-  color: var(--light-text-color);
   display: flow-root;
   position: sticky;
   top: 0;
@@ -74,18 +74,14 @@ nav > ul > li a {
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
   font-size: 18px;
+  font-weight: 700;
   color: white;
   text-decoration: none;
 }
 
 nav > ul > li a:hover,
 nav > ul > li a:focus {
-  color: var(--orange);
-}
-
-nav > ul > li a:hover,
-nav > ul > li a:focus {
-  color: var(--orange);
+  color: var(--light-orange);
 }
 
 nav > ul > li:first-child {
@@ -96,12 +92,12 @@ nav > ul > li:first-child {
 nav > ul > li:first-child a {
   font-family: 'Kaushan Script', cursive;
   text-transform: none;
-  color: var(--orange);
+  color: var(--light-orange);
   font-size: 30px;
 }
 
 header {
-  background-image: url('/img/header-bg.jpg');
+  background-image: url('/img/header-bg.webp');
   background-position: center center;
   background-size: cover;
   text-align: center;
@@ -157,7 +153,7 @@ main section div.section-wrapper {
   float: left;
   margin: 2rem;
   border-radius: 50%;
-  border: solid thick #777;
+  border: solid thick var(--grey);
 }
 
 main section#talks div.section-wrapper {
@@ -201,6 +197,10 @@ main section#talks div.section-wrapper {
 }
 
 #talks a.overlay {
+  text-decoration: none;
+}
+
+#talks .entry a {
   text-decoration: none;
 }
 
@@ -329,6 +329,14 @@ footer {
   padding: 1rem;
   text-align: center;
   font-size: small;
+}
+
+footer a {
+  color: var(--light-orange);
+}
+
+footer a:hover, a:focus, a:active {
+  color: var(--lighter-orange);
 }
 
 @media (max-width: 1024px) {
