--- a/_includes/default.html
+++ b/_includes/default.html
@@ -53,7 +53,7 @@
     </main>
 
     <footer>
-      <p>Except where otherwise <strong>noted</strong> this site is licensed under <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution ShareAlike 4.0 Internacional license.</a></p>
+      <p>Except where otherwise <strong>noted</strong> this site is licensed under <a href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution ShareAlike 4.0 Internacional license</a>.</p>
       <p>Design inspired by <a href="https://startbootstrap.com/theme/agency">Start Bootstrap Agency theme</a>.</p>
     </footer>
 
