--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -17,7 +17,7 @@ html, body {
 
 body {
   font-family: 'Roboto Slab', serif;
-  font-size: 16px;
+  font-size: 1em;
   color: var(--text-color);
 }
 
@@ -27,13 +27,13 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h2 {
-  font-size: 40px;
+  font-size: 2.5rem;
   text-align: center;
   text-transform: uppercase;
 }
 
 h3 {
-  font-size: 25px;
+  font-size: 1.6rem;
 }
 
 p {
@@ -73,7 +73,7 @@ nav > ul > li {
 nav > ul > li a {
   font-family: 'Montserrat', sans-serif;
   text-transform: uppercase;
-  font-size: 18px;
+  font-size: 1.1rem;
   font-weight: 700;
   color: white;
   text-decoration: none;
@@ -94,7 +94,7 @@ nav > ul > li:first-child a {
   text-transform: none;
   color: var(--light-orange);
   font-weight: 400;
-  font-size: 30px;
+  font-size: 2rem;
 }
 
 header {
@@ -110,7 +110,7 @@ header > h1 {
   margin-top: 5rem;
   margin-bottom: 3rem;
   margin-inline: 2rem;
-  font-size: 70px;
+  font-size: 4.2rem;
   text-transform: uppercase;
 }
 
@@ -122,7 +122,7 @@ header > h2 {
   font-style: italic;
   text-transform: none;
   font-weight: 400;
-  font-size: 45px;
+  font-size: 2.8rem;
 }
 
 figure img {
@@ -188,8 +188,8 @@ main section#talks div.section-wrapper {
   height: 0;
 }
 
-#talks .overlay .emoji {
-  font-size: 80px;
+#talks .entry a.overlay.emoji {
+  font-size: 5rem;
   color: white;
 }
 
@@ -272,7 +272,7 @@ main section#travel div.section-wrapper {
   vertical-align: top;
   text-align: left;
   padding-inline: 1rem;
-  font-size: 14px;
+  font-size: 0.9rem;
 }
 
 #travel h3 {
@@ -285,7 +285,7 @@ main section#travel div.section-wrapper {
 }
 
 #travel .emoji {
-  font-size: 50px;
+  font-size: 3.5rem;
   display: block;
   color: white;
   background: var(--orange);
@@ -342,31 +342,26 @@ footer a:hover, a:focus, a:active {
 
 @media (max-width: 1024px) {
   nav > ul {
-    margin: 0;
+    margin-inline: 1rem;
   }
 
   nav > ul > li {
     margin: 0.5rem;
   }
   nav > ul > li a {
-    font-size: 12px;
+    font-size: 0.75rem;
   }
 
-  nav > ul > li:first-child {
-    flex-basis: 100%;
-    text-align: center;
-    margin-top: 1rem;
-  }
   nav > ul > li:first-child a {
-    font-size: 20px;
+    font-size: 1.3rem;
   }
 
   header > h1 {
-    font-size: 50px;
+    font-size: 3rem;
   }
 
   header > h2 {
-    font-size: 30px;
+    font-size: 2rem;
   }
 
   #hackfest img {
@@ -376,15 +371,27 @@ footer a:hover, a:focus, a:active {
   }
 
   h2 {
-    font-size: 30px;
+    font-size: 2rem;
   }
 
   h3 {
-    font-size: 20px;
+    font-size: 1.5rem;
   }
 
   #contact h3 {
-    font-size: 18px;
+    font-size: 1rem;
   }
 
+}
+
+@media (max-width: 512px) {
+  nav > ul {
+    margin-inline: 0;
+  }
+
+  nav > ul > li:first-child {
+    margin-top: 1rem;
+    flex-basis: 100%;
+    text-align: center;
+  }
 }
