--- a/_includes/default.html
+++ b/_includes/default.html
@@ -9,7 +9,7 @@
 
     <title>{{ site.year }} {{ site.title }}</title>
 
-    <link rel="icon" href="/img/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <link href="css/style.css" rel="stylesheet" />
 
     <!-- Custom Fonts -->
