Don't show things on cancelled talks

--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -222,7 +222,8 @@ main section#talks div.section-wrapper {
   margin: 1rem;
 }
 
-#talks .entry.cancelled {
+#talks .entry.cancelled,
+#talks .entry.cancelled dialog {
   filter: grayscale(100%);
 }
 
