--- a/_includes/default.html
+++ b/_includes/default.html
@@ -1,25 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="description" content="{{ site.description }}" />
-    <meta name="keywords" content="{{ site.keywords }}" />
-    <meta name="author" content="{{ site.author }}" />
-
-    <title>{{ site.year }} {{ site.title }}</title>
-
-    <link rel="icon" href="/favicon.ico" />
-    <link href="css/style.css" rel="stylesheet" />
-
-    <!-- Custom Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&family=Montserrat:wght@400;700&family=Noto+Emoji:wght@400;700&family=Roboto+Slab:wght@400;700&family=Droid+Serif:wght@400&display=swap" rel="stylesheet">
-
-  </head>
   <body>
-
+    {% include 'head.html' %}
     <nav>
       <ul>
         <li>
