Fix section vertical aligment
This fixes the sections' vertical scroll offset when navigating through
menu anchor links.

Screencast of the observed issue:
https://drive.google.com/file/d/12rB1Pjm_UO2l23cSB1aGOlrpil_CWTvP/view

Signed-off-by: Nick Diego Yamane <nickdiego@igalia.com>

--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -10,6 +10,10 @@
   --orange-background: #ff9900cc;
 }
 
+html {
+  scroll-padding-top: 5rem;
+}
+
 html, body {
   margin: 0;
   padding: 0;
@@ -55,6 +59,7 @@ nav {
   position: sticky;
   top: 0;
   z-index: 1;
+  height: 5rem;
 }
 
 nav > ul {
