Fix smaller screen sizes

--- a/_assets/css/style.css
+++ b/_assets/css/style.css
@@ -371,6 +371,14 @@ footer a:hover, a:focus, a:active {
 }
 
 @media (max-width: 1024px) {
+  html {
+    scroll-padding-top: 3rem;
+  }
+
+  nav {
+    height: 3rem;
+  }
+
   nav > ul {
     margin-inline: 1rem;
   }
@@ -419,6 +427,14 @@ footer a:hover, a:focus, a:active {
 }
 
 @media (max-width: 512px) {
+  html {
+    scroll-padding-top: 5.5rem;
+  }
+
+  nav {
+    height: 5.5rem;
+  }
+
   nav > ul {
     margin-inline: 0;
   }
