Fix link to home from sponsoring page

--- a/_includes/sponsoring.html
+++ b/_includes/sponsoring.html
@@ -6,7 +6,7 @@
     <nav>
       <ul>
         <li>
-          <a href="#">{{ site.title }} {{ site.year }}</a>
+          <a href="/">{{ site.title }} {{ site.year }}</a>
         </li>
       </ul>
     </nav>
