Remove Breakout sessions button

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -30,7 +30,8 @@
       <h2>{{ site.dates }} | {{ site.location }}</h2>
       <div class="links">
         <a href="{{ site.registrationForm }}">Registration form</a>
-        <a href="{{ site.cfpBreakoutSessions }}">CFP: Breakout Sessions</a>
+        <!--a href="{{ site.cfpTalks }}">CFP: Talks</a-->
+        <!--a href="{{ site.cfpBreakoutSessions }}">CFP: Breakout Sessions</a-->
       </div>
     </header>
 
