--- a/_includes/default.html
+++ b/_includes/default.html
@@ -29,9 +29,10 @@
       <h1>{{ site.title }} {{ site.year }}</h1>
       <h2>{{ site.dates }} | {{ site.location }}</h2>
       <div class="links">
-        <a href="{{ site.registrationForm }}">Registration form</a>
+        <!--a href="{{ site.registrationForm }}">Registration form</a-->
         <!--a href="{{ site.cfpTalks }}">CFP: Talks</a-->
         <!--a href="{{ site.cfpBreakoutSessions }}">CFP: Breakout Sessions</a-->
+        <a href="https://github.com/Igalia/webengineshackfest/wiki#scheduling">Scheduling</a>
       </div>
     </header>
 
