Add live streaming button

--- a/_includes/default.html
+++ b/_includes/default.html
@@ -33,6 +33,7 @@
         <!--a href="{{ site.cfpTalks }}">CFP: Talks</a-->
         <!--a href="{{ site.cfpBreakoutSessions }}">CFP: Breakout Sessions</a-->
         <a href="https://github.com/Igalia/webengineshackfest/wiki#scheduling">Scheduling</a>
+        <a href="https://www.youtube.com/live/De4n7vjEO1o">Live streaming</a>
       </div>
     </header>
 
