--- a/_includes/default.html
+++ b/_includes/default.html
@@ -32,8 +32,10 @@
         <!--a href="{{ site.registrationForm }}">Registration form</a-->
         <!--a href="{{ site.cfpTalks }}">CFP: Talks</a-->
         <!--a href="{{ site.cfpBreakoutSessions }}">CFP: Breakout Sessions</a-->
-        <a href="https://github.com/Igalia/webengineshackfest/wiki#scheduling">Scheduling</a>
-        <a href="https://www.youtube.com/live/De4n7vjEO1o">Live streaming</a>
+        <!--a href="https://github.com/Igalia/webengineshackfest/wiki#scheduling">Scheduling</a-->
+        <!--a href="https://www.youtube.com/live/De4n7vjEO1o">Live streaming</a-->
+        <a href="#talks">Talks Recordings</a>
+        <a href="#breakout-sessions">Breakout Sessions</a>
       </div>
     </header>
 
