--- a/_includes/default.html
+++ b/_includes/default.html
@@ -34,7 +34,7 @@
         <!--a href="{{ site.cfpBreakoutSessions }}">CFP: Breakout Sessions</a-->
         <!--a href="https://github.com/Igalia/webengineshackfest/wiki#scheduling">Scheduling</a-->
         <!--a href="https://www.youtube.com/live/De4n7vjEO1o">Live streaming</a-->
-        <a href="#talks">Talks Recordings</a>
+        <a href="https://www.youtube.com/playlist?list=PL4sEzdAGvRgDkGm0XYou_lJ5wdmIi7FJY">Talks Recordings</a>
         <a href="#breakout-sessions">Breakout Sessions</a>
       </div>
     </header>
