--- a/_includes/default.html
+++ b/_includes/default.html
@@ -29,13 +29,13 @@
       <h1>{{ site.title }} {{ site.year }}</h1>
       <h2>{{ site.dates }} | {{ site.location }}</h2>
       <div class="links">
-        <!--a href="{{ site.registrationForm }}">Registration form</a-->
+        <a href="{{ site.registrationForm }}">Registration form</a>
         <!--a href="{{ site.cfpTalks }}">CFP: Talks</a-->
         <!--a href="{{ site.cfpBreakoutSessions }}">CFP: Breakout Sessions</a-->
         <!--a href="https://github.com/Igalia/webengineshackfest/wiki#scheduling">Scheduling</a-->
         <!--a href="https://www.youtube.com/live/De4n7vjEO1o">Live streaming</a-->
-        <a href="https://www.youtube.com/playlist?list=PL4sEzdAGvRgDkGm0XYou_lJ5wdmIi7FJY">Talks Recordings</a>
-        <a href="#breakout-sessions">Breakout Sessions</a>
+        <!--a href="https://www.youtube.com/playlist?list=PL4sEzdAGvRgDkGm0XYou_lJ5wdmIi7FJY">Talks Recordings</a-->
+        <!--a href="#breakout-sessions">Breakout Sessions</a-->
       </div>
     </header>
 
